--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -47,15 +47,7 @@ body{
 	background-repeat:no-repeat;
 	
  }
-#pricipal #container #login {
-    background-color: #800000;
-/*    float: left;
-    height: 169px; */
-    margin-left: 39%;
-    margin-top: 22%;
-    width: 295px;
-	
-}
+
 
  #pricipal #footer{
  float:left;
@@ -73,7 +65,6 @@ body{
 	
  } 
 
-
 #titreLogin{
 	color: #FFFFFF;
 	font-size: 16px;
@@ -82,25 +73,29 @@ body{
 	
 	}
 
-	
-	
 #login {
 	color: #FFFFFF;
     margin-bottom: 15px;
     margin-left: 3px;
 	width:300px;
-	}
-
-
+}
 
 #login form label{
     font-family: Helvetica;
     padding-left: 13px;
  	margin-top:3px;
-	
 	float:left;
 	width:50px;
+}
 
+#pricipal #container #login {
+ /*   background-color: #800000;
+    float: left;
+    height: 169px; */
+    margin-left: 39%;
+    margin-top: 22%;
+    width: 295px;
+	
 }
 
 .field{
